@@ -89,6 +89,7 @@ const struct ecc_curve nettle_secp_521r1 =
   ecc_q,
   ecc_g,
   ecc_redc_g,
+  NULL,
   ecc_521_modp,
   ecc_generic_redc,
   ecc_521_modp,
